@@ -939,6 +939,7 @@ pdftex
 qt
 rmic
 sgiar
+sgic++
 sgicc
 sgilink
 sunar
